# tulipa-app-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  tulipa_offers_scraper.py
.github/workflows/: ci.yml
src/tulipa_app_scraper/: __init__.py  __main__.py  cli.py
src/tulipa_app_scraper/domain/: __init__.py  errors.py  models.py
src/tulipa_app_scraper/infrastructure/: __init__.py  cache.py  config.py  csv_writer.py  helios_client.py
src/tulipa_app_scraper/services/: __init__.py  discovery.py  scraper.py
tests/: test_cache.py  test_config.py  test_csv_writer.py
